# hephaistus

./: .gitignore  .openclaw  .vscodeignore  CHANGELOG.md  CONTEXT.md  README.md  package-lock.json  package.json  tsconfig.json
docs/: PARSER-ENHANCEMENT.md  PARSING.md  ROUND-TRIP.md  TEST-MANUAL-ROUNDTRIP.md  TEST-PLAN.md  architecture.md  spec.md  use_cases_blueprint.md  vision.md
docs/diff-reports/: diff-arch-code.json  diff-spec-code.json  gap-backlog.json  kicad-kiutils-workflow.md
docs/python/: README.md  kicad-sync-readme.md  kicad-sync-spec.md  kicad-sync.md  testing.md
docs/testing/: AGENT-TESTS.md  README.md  USER-TESTS.md
fixtures/ledgers/: README.md  ledger.json  ledger_aligned.json
fixtures/schematics/: README.md  schematic.kicad_sch
fixtures/simulations/: README.md
python/: pyproject.toml  requirements.txt  setup.py
python/hephaistus/: __init__.py  kicad_env.py
python/hephaistus/kicad_sync/: __init__.py  delta.py  kicad_update.py  staging.py  updater.py  utils.py
python/hephaistus/simulation/: __init__.py
python/hephaistus/utils/: __init__.py
scripts/: bootstrap-kiutils.sh  postinstall.js
scripts/test/: agent.sh
scripts/wrappers/: kicad_parser.py  (+2 more)
src/: backupService.ts  configService.ts  extension.ts  extensionActivationHandler.ts  fileWatcherService.ts  hephaistusService.ts  hephaistusServiceBridge.ts  hephaistusServiceOrchestratorWrapper.ts  llmClientFactory.ts  llmConfig.ts  llmService.ts  reviewService.ts  stateManager.ts  syncOrchestrator.ts  utils.ts
tests/: test_round_trip.sh  test_roundtrip_manual.sh
(+21 files in other folders)
